Outliner: Click on empty area next to View Layer name triggers object select #102357
Labels
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
No due date set.
Dependencies
No dependencies set.
Reference: blender/blender#102357
Loading…
Reference in New Issue
No description provided.
Delete Branch "%!s(<nil>)"
Deleting a branch is permanent. Although the deleted branch may continue to exist for a short time before it actually gets removed, it CANNOT be undone in most cases. Continue?
System Information
Operating system: Linux-5.15.11-76051511-generic-x86_64-with-glibc2.34 64 Bits
Graphics card: NVIDIA RTX A5000/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 510.73.05
Blender Version
Broken: version: 3.5.0 Alpha, branch: master, commit date: 2022-11-08 13:28, hash:
1d71f82033
Worked: I don't think it ever worked.
Short description of error
In the Outliner, with "All View Layers" filter turned on, when I click on the empty area next to the name of the View Layer, it selects the Camera, or Cube.
When there are many objects in the scene it triggers the object search.
{F13868667, size=full}
Mockup of what I think it's going on under the hood:
{F13868683, size=full}
Exact steps for others to reproduce the error
Added subscriber: @pablovazquez
Changed status from 'Needs Triage' to: 'Confirmed'
Talked with Dalai and he will look into it since he worked in this area before.
Added subscriber: @lichtwerk
Question: do we
outliner_find_item_at_x_in_row
see P3310(a) looks like this:

Thanks for looking into it! It's a valid question, since it's already working, why not? Thing is, all ViewLayers have the same content (by design, all they do is define visibility of Collections). So on one side yes why not, on the other side it'll look duplicate and add noise to the scene.
What would be useful to display is info such as:
This could be interesting to investigate but it's a task on itself, so in order to fix and close this task I would go with (b), to not show the icons row and simply fix the fact that all ViewLayers get expanded.
Added subscriber: @dfelinto
ok, will claim then (if you dont mind @dfelinto)
This issue was referenced by
442ce8610d
This issue was referenced by
923f394485
Changed status from 'Confirmed' to: 'Resolved'